<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/home_back_color">

    <TextView
        android:id="@+id/home_wel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_wel"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/home_b_signup"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@drawable/round_button"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/home_back_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_or"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_wel"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/home_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_wel"
        app:layout_constraintVertical_bias="0.078" />

    <Button
        android:id="@+id/home_b_login"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/home_back_color"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toEndOf="@+id/home_or"
        app:layout_constraintTop_toBottomOf="@+id/home_wel"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/home_bldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_bldo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_or"
        app:layout_constraintVertical_bias="0.10" />


    <ProgressBar
        android:id="@+id/hom_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />


</androidx.constraintlayout.widget.ConstraintLayout >