<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/pale_violet_red">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".LoginActivity">


        <TextView
            android:id="@+id/t_veri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Not Verified"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/t_log_in_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/t_log_in_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in_form"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <TextView
            android:id="@+id/t_log_in_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in_reg"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_log_in_form"
            app:layout_constraintVertical_bias="0.03" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_log_in_reg"
            app:layout_constraintVertical_bias="0.075">

            <EditText
                android:id="@+id/et_log_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:passwordToggleEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/et_log_in_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:inputType="textPassword"
                android:hint="@string/pass"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_pass"
            android:textColor="@color/red"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_pass"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/bt_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/round_button"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_pass"
            app:layout_constraintVertical_bias="0.1" />


        <ProgressBar
            android:id="@+id/pb_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/t_log_in_reg"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="90sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_log_in" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


