<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:id="@+id/about_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:text="@string/about_nir"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/about_iv_1"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="10sp"
            android:src="@drawable/about_photo_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_tv"/>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:id="@+id/about_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_nir1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_iv_1"/>

        <ImageView
            android:id="@+id/about_iv_2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/about_photo_2"
            android:layout_marginTop="10sp"
            app:layout_constraintTop_toBottomOf="@+id/about_tv1"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:id="@+id/about_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/about_nir2"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_iv_2"/>

        <ImageView
            android:id="@+id/about_iv_3"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/about_photo_3"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            app:layout_constraintTop_toBottomOf="@+id/about_tv2"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:id="@+id/about_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="@string/about_nir3"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_iv_3"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>
